--- a/public/global.css
+++ b/public/global.css
@@ -7,11 +7,17 @@
   --orange: #f18407;
   --orange-light: #fbc88f;
   --gray: #888888;
+  --gray-hover: #c5c5c5;
   --gray-light: #d6d6d6;
-
+  --gray-dark: #454545;
+  --lite-white: #f1f1f1;
+  --white: #ffffff;
+  --primary-blue: #0099ff;
+  --dark-blue: #0876c0;
   /* Font stack */
   /* Custom fonts downloaded from Google Fonts -- see public/index.html */
   --main-font: "Cabin";
+  --secondary-font: "Roboto";
   --mono-font: "Roboto Mono";
 }
 
