--- a/public/global.css
+++ b/public/global.css
@@ -85,3 +85,15 @@ pre, code, samp {
 .button--shadow {
   box-shadow: 0px 25px 30px rgba(0, 0, 0, 0.15);
 }
+
+.button--small {
+  padding: .3125rem .625rem;
+}
+
+.button--medium {
+  padding: .625rem 1.25rem;
+}
+
+.button--large {
+  padding: .625rem 3.75rem;
+}
