--- a/public/global.css
+++ b/public/global.css
@@ -65,12 +65,6 @@ a.button:focus {
   outline-color: -webkit-focus-ring-color;
 }
 
-.button--blue.button--outline:hover,
-.button--primary.button--outline:hover,
-.button--grey.button--outline:hover {
-  background-color: var(--lite-white);
-}
-
 .button--grey:hover {
   background-color: var(--gray-hover);
 }
@@ -96,6 +90,10 @@ a.button:focus {
   border-color: var(--primary-blue);
   background-color: var(--white);
   color: var(--primary-blue);
+}
+
+.button--outline:hover {
+  background-color: var(--lite-white);
 }
 
 .button--shadow {
