able to search now

--- a/public/global.css
+++ b/public/global.css
@@ -9,6 +9,7 @@
   --gray: #888888;
   --gray-hover: #c5c5c5;
   --gray-light: #d6d6d6;
+  --gray-highlight: #e0e0e0;
   --gray-dark: #454545;
   --lite-white: #f1f1f1;
   --white: #ffffff;
