--- a/public/global.css
+++ b/public/global.css
@@ -7,6 +7,7 @@
   --orange: #f18407;
   --orange-light: #fbc88f;
   --gray: #888888;
+  --gray-secondary-text: #515154;
   --gray-hover: #c5c5c5;
   --gray-disabled: #949494;
   --gray-light: #d6d6d6;
