--- a/public/global.css
+++ b/public/global.css
@@ -17,7 +17,7 @@
   --white: #ffffff;
   --hello: #0071bc;
   --primary-blue: #0077cc;
-  --dark-blue: #0876c0;
+  --dark-blue: #054b7a;
 
   --default-text-color: #000;
 
