refactor error colour

--- a/public/global.css
+++ b/public/global.css
@@ -17,6 +17,8 @@
   --white: #ffffff;
   --primary-blue: #0077cc;
   --dark-blue: #054b7a;
+  --error-bg-color: #f8d7db;
+  --error-fg-color: #400000;
 
   --default-text-color: #000;
 
